Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0-rc1
-
None
-
c6fff90c734f2462ecf9bd3415bf7372b4f0a459
Description
How to reproduce:
1) Have a host-machine where you do not have any 'java' available on PATH env. var. i.e. when you open command-line and run 'java', it will print out: 'java command not found'
2) Start QtCreator, open Tools -> Options -> Devices -> Add... -> BlackBerry Device.
3) What the device auto-detection - it will quickly fail to detect any device - even through you have an API Level 10.2.0 or newer installer/registered.
This is becuase QtCreator runs:
PATH_TO_QNX_HOST/usr/bin/blackberry-deploy.bat -devices
but it does not set environment variables e.g. PATH properly and therefore blackberry-deploy.bat cannot run related 'java' program to run.
This is a critical issue and needs to be fixed as soon as possible.
Possible workaround:
Update all PATH_TO_QNX_HOST/usr/bin/*.bat files from:
@java ...
to:
@"FULL_PATH_TO_JAVA_HOME\bin\java" ...
e.g.:
@"C:\Program Files\Java\jre7\bin\java" ...