Qnx: Fixing incorrect environment for running BlackBerry cmd-line tools

The BlackBerry command-line tools were launched without any environment set
that would match the related BB NDK Target. This results in command-line
tools to not run at all (they fail to find 'java' program).

The only workaround it to have 'java' program on system PATH.

Task-number: QTCREATORBUG-11029
Change-Id: I90e102413d7843d538d394aec306749e37e6148b
Reviewed-by: Rafael Roquetto <rafael.roquetto@kdab.com>
Reviewed-by: Tobias Nätterlund <tobias.naetterlund@kdab.com>
Reviewed-by: Nicolas Arnaud-Cormos <nicolas@kdab.com>
Reviewed-by: David Kaspar <dkaspar@blackberry.com>